Update to Minecraft 1.19.2